--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">BBSApp</string>
+    <string name="threads_list_navigation_label">スレッド一覧</string>
+    <string name="favorite_navigation_label">お気に入り</string>
 </resources>
