--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">BBSApp</string>
     <string name="threads_list_navigation_label">スレッド一覧</string>
     <string name="favorite_navigation_label">お気に入り</string>
+    <string name="add_favorite_message">お気に入りに追加しました</string>
 </resources>
