[Added]アカウント作成画面レイアウト及び遷移処理

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,13 @@
     <string name="threads_list_navigation_label">スレッド一覧</string>
     <string name="favorite_navigation_label">お気に入り</string>
     <string name="add_favorite_message">お気に入りに追加しました</string>
+    <string name="sign_up_screen_app_bar_title">アカウント情報登録</string>
     <string name="login_screen_app_bar_title">ログイン情報</string>
     <string name="login_button">ログイン</string>
     <string name="sign_up_button">アカウント作成</string>
     <string name="login_as_guest_button">ゲストとしてログイン</string>
     <string name="email_placeholder">メールアドレス</string>
     <string name="password_placeholder">パスワード</string>
+    <string name="repeat_password_placeholder">パスワード（再入力）</string>
+    <string name="user_name_placeholder">ユーザー名</string>
 </resources>
